syntax = "proto2";
option optimize_for = SPEED;
option java_package = "routing";
import "common.proto";
import "file.proto";
message CommandMessage {
   required Header header = 1;
    oneof payload {
      bool ping = 3;
      string message = 4;
      Failure err = 5;
      Request reqMsg = 6;
      Response resMsg = 7;
   }
}